--- a/app/views/admin/content/new.html.erb
+++ b/app/views/admin/content/new.html.erb
@@ -3,12 +3,12 @@
 <%= render "admin/shared/edit", { :form_type => "article", :form_action => { :action => "new", :id => @article.id , :class => ('autosave')} } %>
 
 <% if !@article.new_record? and current_user.admin? %>
+<h4>Merge Articles</h4>
+
+
   <%= form_tag admin_merge_article_path(@article.id) do %>
-  <label>
-    Merge With:
-    <br />
-    <input type="text" name="merge_with" id="merge_with" />
-  </label>
+<label>Article ID: </label> <br />
+  <input type="text" name="merge_with" id="merge_with" />
   <br />
   <input type="submit" value="Merge" />
   <% end %>
